<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvChannelNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etChannelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/enter_channel_name"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/tvChannelNameLabel" />

    <TextView
        android:id="@+id/tvChannelDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etChannelName" />

    <EditText
        android:id="@+id/etChannelDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/enter_description"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:minLines="2"
        app:layout_constraintTop_toBottomOf="@id/tvChannelDescriptionLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
